# dcnv4

./: LICENSE.txt  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: build_wheels.yml
dcnv4/_C/: __init__.pyi
dcnv4/csrc/: dcnv4.cpp  dcnv4.h  macros.h
dcnv4/csrc/ops/: dcnv4.cpp  dcnv4.h  flash_deform_attn.cpp  flash_deform_attn.h  ops.h
dcnv4/csrc/ops/cuda/: common.h  dcnv4_col2im_cuda.cuh  dcnv4_cuda.cu  dcnv4_cuda.h  dcnv4_im2col_cuda.cuh  flash_deform_attn_cuda.cu  flash_deform_attn_cuda.h  flash_deform_col2im_cuda.cuh  flash_deform_im2col_cuda.cuh
dcnv4/csrc/ops/utils/: dispatch.h
dcnv4/ops/: __init__.py  _dcnv4.py  _flash_deform_attn.py
dcnv4/ops/autograd/: __init__.py  _dcnv4.py  _flash_deform_attn_func.py
tests/: test_forward_backward.py
tools/packaging/: audit_torch_extension.py
