[metadata]
name = DCNv4
description = Deformable Convolution Networks v4
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt
author = Hoang-Nhat Tran (inspiros)
author_email = hnhat.tran@gmail.com
url = https://github.com/inspiros/dcnv4
download_urls = https://test_pypi.org/project/dcnv4
project_urls =
    Source = https://github.com/inspiros/dcnv4
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.1
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = dcnv4,deform_conv_v4,deformable_convolution_v4

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
setup_requires = torch>=2.1.0
install_requires = torch>=2.1.0

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    tests*

[options.package_data]
* = *.h, *.hpp, *.cuh, *.c, *.cpp, *.cu, *.
